--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,21 @@ version: '3.9'
 
 services:
 
-  # ── MySQL ──────────────────────────────────────────────────────────────────
+  # ── PostgreSQL ─────────────────────────────────────────────────────────────
   db:
-    image: mysql:8.0
+    image: postgres:16-alpine
     container_name: pugapi_db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: pugapi
-      MYSQL_USER: puguser
-      MYSQL_PASSWORD: pugpassword
+      POSTGRES_DB: pugapi
+      POSTGRES_USER: puguser
+      POSTGRES_PASSWORD: pugpassword
     ports:
-      - "3306:3306"
+      - "5432:5432"          # expose localement pour TablePlus, DBeaver, etc.
     volumes:
-      - mysql_data:/var/lib/mysql
+      - pg_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-upuguser", "-ppugpassword"]
+      test: ["CMD-SHELL", "pg_isready -U puguser -d pugapi"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -27,14 +26,15 @@ services:
     build: .
     container_name: pugapi_api
     restart: unless-stopped
-    env_file: .env          # loads your local .env
+    env_file: .env
     ports:
       - "3000:3000"
     depends_on:
       db:
-        condition: service_healthy   # wait for MySQL to be ready before starting
+        condition: service_healthy
     environment:
-      DB_HOST: db            # override to match the docker-compose service name
+      DB_HOST: db
+      DB_SSL: "false"
 
 volumes:
-  mysql_data:
+  pg_data:
