--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "dev": "nodemon bin/www.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "5.0.0",
-    "pg": "^8.11.5",
-    "dotenv": "^16.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.18.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
